backend/internal/architecture/testdata/invalid/internal/modules/bad/internal/domain/domain_gorm.go
package domain

import "gorm.io/gorm"

// Record demonstrates forbidden persistence leakage.
type Record struct{ DB *gorm.DB }
